# reqwest-rewire

./: Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: rust.yml
src/: client.rs  lib.rs  rewire_client.rs  testable_client.rs
tests/: reqwest_client_tests.rs  rewire_client_tests.rs
tests/common/: test_utils.rs
