[package]
name = "reqwest-rewire"
version = "0.1.0"
edition = "2024"
authors = ["Zack PEDRETTI"]
description = "A Reqwest wrapper that redirects requests based on a map, useful for mocking APIs"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking"]}
http = "1.4.0"

[dev-dependencies]
httpmock = "0.8.2"
tokio = "1.48.0"